WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213055
Linear Scan uses the wrong Interval for spills for tmps with roles of early def or late use
https://bugs.webkit.org/show_bug.cgi?id=213055
Summary
Linear Scan uses the wrong Interval for spills for tmps with roles of early d...
Saam Barati
Reported
2020-06-10 15:39:43 PDT
...
Attachments
patch
(11.06 KB, patch)
2020-06-10 18:09 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2020-06-10 15:40:22 PDT
<
rdar://problem/59874018
>
Saam Barati
Comment 2
2020-06-10 18:09:23 PDT
Created
attachment 401612
[details]
patch
Yusuke Suzuki
Comment 3
2020-06-11 17:00:51 PDT
Comment on
attachment 401612
[details]
patch r=me
EWS
Comment 4
2020-06-11 17:29:34 PDT
Committed
r262932
: <
https://trac.webkit.org/changeset/262932
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401612
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug