Source/JavaScriptCore/b3/air/AirAllocateRegistersAndStackByLinearScan.cpp
@@ -183,15 +183,49 @@ private:
         return indexOfHead(block) + block->size() * 2;
     }
     
-    Interval interval(size_t indexOfEarly, Arg::Timing timing)
+    static Interval earlyInterval(size_t indexOfEarly)
+    {
+        return Interval(indexOfEarly);
+    }
+
+    static Interval lateInterval(size_t indexOfEarly)
+    {
+        return Interval(indexOfEarly + 1);
+    }
+
+    static Interval earlyAndLateInterval(size_t indexOfEarly)
+    {
+        return earlyInterval(indexOfEarly) | lateInterval(indexOfEarly);
+    }
+
+    static Interval interval(size_t indexOfEarly, Arg::Timing timing)
     {
         switch (timing) {
         case Arg::OnlyEarly:
-            return Interval(indexOfEarly);
+            return earlyInterval(indexOfEarly);
         case Arg::OnlyLate:
-            return Interval(indexOfEarly + 1);
+            return lateInterval(indexOfEarly);
         case Arg::EarlyAndLate:
-            return Interval(indexOfEarly, indexOfEarly + 2);
+            return earlyAndLateInterval(indexOfEarly);
+        }
+        ASSERT_NOT_REACHED();
+        return Interval();
+    }
+
+    static Interval intervalForSpill(size_t indexOfEarly, Arg::Role role)
+    {
+        Arg::Timing timing = Arg::timing(role);
+        switch (timing) {
+        case Arg::OnlyEarly:
+            if (Arg::isAnyDef(role))
+                return earlyAndLateInterval(indexOfEarly); // We have a spill store after this insn.
+            return earlyInterval(indexOfEarly);
+        case Arg::OnlyLate:
+            if (Arg::isAnyUse(role))
+                return earlyAndLateInterval(indexOfEarly); // We had a spill load before this insn.
+            return lateInterval(indexOfEarly);
+        case Arg::EarlyAndLate:
+            return earlyAndLateInterval(indexOfEarly);
         }
         ASSERT_NOT_REACHED();
         return Interval();
@@ -549,7 +583,7 @@ private:
                         if (!spilled)
                             return;
                         Opcode move = bank == GP ? Move : MoveDouble;
-                        tmp = addSpillTmpWithInterval(bank, interval(indexOfEarly, Arg::timing(role)));
+                        tmp = addSpillTmpWithInterval(bank, intervalForSpill(indexOfEarly, role));
                         if (role == Arg::Scratch)
                             return;
                         if (Arg::isAnyUse(role))
